# SLAC-MCP

./: AGENTS.md  Cargo.toml  README.md  build.bat
npm/slac-mcp/: README.md  package.json  server.json
npm/slac-mcp-linux-arm64/: package.json
npm/slac-mcp-linux-x64/: package.json
npm/slac-mcp-win32-x64/: package.json
src/: get-syntax.md  main.rs  server.rs
